<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegundoActivity">

    <EditText
        android:id="@+id/editTextValorRecibido"
        android:layout_width="256dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_text_valor_recibido"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextValor1SegundoActivity"
        android:layout_width="256dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_text_valor_recibido2"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextResultadoSegundoActivity"
        android:layout_width="256dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_text_valor_resultdado_segundo_activity"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <Button
        android:id="@+id/buttonEnviar2"
        android:layout_width="164dp"
        android:layout_height="78dp"
        android:layout_marginTop="364dp"
        android:onClick="enviarValor"
        android:text="@string/button_enviar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValorRecibido"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonMultiplicarSegundoActivity"
        android:layout_width="160dp"
        android:layout_height="79dp"
        android:layout_marginTop="264dp"
        android:onClick="multiplicarValores"
        android:text="@string/button_multiplicar_segundo_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValorRecibido" />

</androidx.constraintlayout.widget.ConstraintLayout>